--- a/views/cecan.ejs
+++ b/views/cecan.ejs
@@ -7,9 +7,9 @@
     <meta name="description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
     <meta name="author" content="zeeoneofc">
-    <title>Alphabot - REST APIs</title>
-    <meta property="og:site_name" name="og:site_name" content="Alphabot APIs">
-    <meta property="og:title" name="og:title" content="Alphabot - REST APIs">
+    <title>Sregep Shop - REST APIs</title>
+    <meta property="og:site_name" name="og:site_name" content="SregepShop APIs">
+    <meta property="og:title" name="og:title" content="SregepShop - REST APIs">
     <meta property="og:url" name="og:url" content="https://api-alphabot.herokuapp.com/">
     <meta property="og:image" name="og:image" content="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
     <meta property="og:description" name="og:description" content="A REST APIs website that provides a wide variety of features for developers.">
@@ -43,7 +43,7 @@
       <div class="sidebar-wrapper">
         <div class="logo">
           <a href="javascript:void(0)" class="simple-text logo-normal">
-            Alphabot Api
+            Sregep Shop Api
           </a>
         </div>
         <ul class="nav">
@@ -364,7 +364,7 @@
           <ul class="nav">
             <li class="nav-item">
               <a href="javascript:void(0)" class="nav-link">
-                ZEEONE OFC
+                BANG ZAKI
               </a>
             </li>
           </ul>
@@ -373,7 +373,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script> made with <i class="tim-icons icon-heart-2"></i> by
-            <a href="https://github.com/zeeoneofficial" target="_blank">ZeeoneOfc</a> for a better web.
+            <a href="https://github.com/Zamzami123" target="_blank">SregepShopID</a> for a better web.
           </div>
         </div>
       </footer>
