--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Situs web REST API yang menyediakan berbagai macam Api untuk mengembangkan aplikasimu.">
 <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
-<meta name="author" content="ZeeoneOfc">
-<title> Alphabot - REST APIs</title>
-<meta property="og:site_name" name="og:site_name" content="Alphabot APIs">
-<meta property="og:title" name="og:title" content="Alphabot - REST APIs">
-<meta property="og:url" name="og:url" content="https://api.zeeoneofc.my.id/">
+<meta name="author" content="SregepShop ID">
+<title> SregepShop - REST APIs</title>
+<meta property="og:site_name" name="og:site_name" content="Sregepshop APIs">
+<meta property="og:title" name="og:title" content="Sregepshop - REST APIs">
+<meta property="og:url" name="og:url" content="https://linktr.ee/sregepshop.id">
 <meta property="og:image" name="og:image" content="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
 <meta property="og:description" name="og:description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
 <link rel="apple-touch-icon" sizes="57x57" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
@@ -43,7 +43,7 @@
 <div class="sidebar-wrapper">
 <div class="logo">
 <a href="javascript:void(0)" class="simple-text logo-normal">
-Alphabot Api
+SregepShop Api
           </a>
         </div>
         <ul class="nav">
@@ -116,9 +116,9 @@ Alphabot Api
 </div>
 <ul class="nav">
 <li>
-<a href="https://youtube.com/@zeeoneofc">
+<a href="https://youtube.com/@SregepShopofficial">
 <i class="tim-icons icon-send"></i>
-<p>ZeeoneOfc</p>
+<p>SregepshopID</p>
 </a>
 </li>
 </ul>
@@ -198,7 +198,7 @@ Profile
 <small class="fs-12 text-warning">
 <div id="browser_sholat"></div>
 </small>
-<small class="fs-12 text-success">Macam tak betul lah budak nih!!!</small>
+<small class="fs-12 text-success">Contoh anak haram</small>
 </div>
 <span class="text-info fs-35 dash1-iocns bg-success-transparent border-success"><i class="tim-icons icon-time-alarm" aria-hidden="true"></i></span>
 </div>
@@ -214,7 +214,7 @@ Profile
 <h2 class="mb-1 number-font">
 <div class="visitor"><%= username %></div>
 </h2>
-<small class="fs-12 text-success">Your name</small>
+<small class="fs-12 text-success">Nama Kamu</small>
 </div>
 <span class="text-info fs-35 dash1-iocns bg-info-transparent border-info"><i class="fa fa-user" aria-hidden="true"></i></span>
 </div>
@@ -246,7 +246,7 @@ Profile
 <h2 class="mb-1 number-font">
 <div class="visitor"><%= limit %></div>
 </h2>
-<small class="fs-12 text-success">Remaining limit today</small>
+<small class="fs-12 text-success">Limit Kamu Hari ini</small>
 </div>
 <span class="text-info fs-35 dash1-iocns bg-info-transparent border-info"><i class="fa fa-fire" aria-hidden="true"></i></span>
 </div>
@@ -403,11 +403,11 @@ document.write(txt);
 <tr>
 <p> Allah SWT</p>
 <p> My Perents</p>
-<p> Loli Killers</p>
-<p> Rynz</p>
-<p> Eka Danuarta</p>
+<p> BANG KII</p>
+<p> All Admin</p>
+<p> SREGEP SHOP OFFICIAL</p>
 <p> ZeeoneOfc </p>
-<p> Creative Time [ For Template ]</p>
+<p> Creative Human</p>
 <p> ALL HUMAN</p>
 </tr>
 </tbody>
@@ -423,7 +423,7 @@ document.write(txt);
 <ul class="nav">
 <li class="nav-item">
 <a href="javascript:void(0)" class="nav-link">
-ZEEONE OFC
+SREGEP SHOP ID
 </a>
 </li>
 </ul>
@@ -432,7 +432,7 @@ ZEEONE OFC
 <script>
 document.write(new Date().getFullYear())
 </script> made with <i class="tim-icons icon-heart-2"></i> by
-<a href="https://github.com/zeeone-ofc" target="_blank">Zeeoneofc</a>.
+<a href="https://github.com/Zamzami123" target="_blank">Zamzami123</a>.
 </div>
 </div>
 </footer>
@@ -463,16 +463,16 @@ document.write(new Date().getFullYear())
 </li>
 <li class="button-container">
 <a class="text-center">Contact Me</a>
-<a href="https://wa.me/62887435047326" target="_blink" class="btn btn-success btn-block btn-round">Whatsapp</a>
-<a href="https://t.me/zeeoneofc" target="_blink" class="btn btn-info btn-block btn-round">Telegram</a>
-<a href="https://instagram.com/zeeoneofc" target="_blink" class="btn btn-primary btn-block btn-round">Instagram</a>
+<a href="https://wa.me/6285733566761" target="_blink" class="btn btn-success btn-block btn-round">Whatsapp</a>
+<a href="https://t.me/SregepshopID" target="_blink" class="btn btn-info btn-block btn-round">Telegram</a>
+<a href="https://instagram.com/zaki.blitar" target="_blink" class="btn btn-primary btn-block btn-round">Instagram</a>
 </li>
 </ul>
 </div>
 </div>
 <script>
 f=
-_=>navigator.getBattery().then(b=>alert('Subcribe YT ZEEONE OFC jika ingin memakai rest api ini'))
+_=>navigator.getBattery().then(b=>alert('Gabung Komunitas Sregep Shop ID Dulu Lah Minimal🗿'))
 f()
 </script>
 <!-- Core JS Files -->
