--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,15 +8,15 @@
     <meta name="description" content="Nothing spesial here">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
     <meta name="author" content="">
-    <title>Api Alphabot | Home</title>
+    <title>Api SregepShop | Home</title>
     <meta property="og:site_name" name="og:site_name" content="Zeeoneofc Api">
-    <meta property="og:title" name="og:title" content="Zeeoneofc Api">
+    <meta property="og:title" name="og:title" content="Sregep Shop Api">
     <meta property="og:url" name="og:url" content="https://hadehhhh.herokuapp.com/">
     <meta property="og:description" name="og:description" content="Nothing spesial here">
     	<script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"> </script>
      <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <link rel="shortcut icon" href="https://f.top4top.io/p_2097ib6hw1.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://telegra.ph/file/afd0519abbaccc445d2e5.jpg" type="image/x-icon" />
     <meta name="theme-color" content="#ffffff">
     <link rel="canonical" href="https://hadehhhh.herokuapp.com/">
 </head>
@@ -33,7 +33,7 @@
     </div>
     <div class="bottom">
         <p align="center">
-            <a href="http://wa.me/62887435047326" rel="noopener noreferrer" class="text"><i class="mdi mdi-whatsapp"></i>Whatsapp</a>
+            <a href="http://wa.me/6285733566761" rel="noopener noreferrer" class="text"><i class="mdi mdi-whatsapp"></i>Whatsapp</a>
         </p>
     </div>
 </body>
@@ -47,7 +47,7 @@
 }
 
 html {
-    background: url(https://telegra.ph/file/e3f3b4bc0c2dbccb4f4c5.jpg) no-repeat center center fixed;
+    background: url(https://telegra.ph/file/1075853325c2f32f4fffe.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
