--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,7 +47,7 @@
 }
 
 html {
-    background: url(https://telegra.ph/file/1075853325c2f32f4fffe.png) no-repeat center center fixed;
+    background: url(https://telegra.ph/file/2e0b9eaf54fedd71f5ded.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
