--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
 
 				<form class="login100-form validate-form" action="/users/login" method="POST">
 					<span class="login100-form-title">
-						Auth Login
+						Login to Sregep Shop Rest-Api
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Username is required">
@@ -50,12 +50,12 @@
 					
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Login
+							Masuk
 						</button>
 					</div>
 					<div class="text-center p-t-40">
 						<a class="txt2" href="/users/signup">
-							Create your Account
+							Tidak punya akun?,Buat akun baru
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
