--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,30 +28,30 @@
 				</div>
 				<form class="login100-form validate-form" action="/users/signup" method="POST">
 					<span class="login100-form-title">
-						Auth Signup
+						Daftar Sregep Shop Rest-api
 					</span>
-					<div class="wrap-input100 validate-input" data-validate = "Email is required">
+					<div class="wrap-input100 validate-input" data-validate = "Email di butuhkan">
 						<input class="input100" type="text" name="email" placeholder="email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
 					</div>
-					<div class="wrap-input100 validate-input" data-validate = "Username is required">
+					<div class="wrap-input100 validate-input" data-validate = "Username di butuhkan">
 						<input class="input100" type="text" name="username" placeholder="username">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
 						</span>
 					</div>
-					<div class="wrap-input100 validate-input" data-validate = "Password is required">
+					<div class="wrap-input100 validate-input" data-validate = "Kata Sandi dibutuhkan">
 						<input class="input100" type="password" name="pass" placeholder="password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
-					<div class="wrap-input100 validate-input" data-validate = "Confirm password is required">
+					<div class="wrap-input100 validate-input" data-validate = "Konfirmasi kata sandi diperlukan">
 						<input class="input100" type="password" name="pass2" placeholder="confirm password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
@@ -60,12 +60,12 @@
 					</div>
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Sign Up
+							Daftar
 						</button>
 					</div>
 					<div class="text-center p-t-40">
 						<a class="txt2" href="/users/login">
-							Already have account
+							Akun tersebut sudah ada
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
