--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,31 +28,32 @@
 				</div>
 				<form class="login100-form validate-form" action="/users/signup" method="POST">
 					<span class="login100-form-title">
-						Daftar Sregep Shop Rest-api
+						Daftar 
+                                         Sregep Shop Rest-api
 					</span>
 					<div class="wrap-input100 validate-input" data-validate = "Email di butuhkan">
-						<input class="input100" type="text" name="email" placeholder="email">
+						<input class="input100" type="text" name="email" placeholder="Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate = "Username di butuhkan">
-						<input class="input100" type="text" name="username" placeholder="username">
+						<input class="input100" type="text" name="username" placeholder="Username">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate = "Kata Sandi dibutuhkan">
-						<input class="input100" type="password" name="pass" placeholder="password">
+						<input class="input100" type="password" name="pass" placeholder="Kata sandi">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate = "Konfirmasi kata sandi diperlukan">
-						<input class="input100" type="password" name="pass2" placeholder="confirm password">
+						<input class="input100" type="password" name="pass2" placeholder="Konfirmasi kata sandi">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -65,7 +66,7 @@
 					</div>
 					<div class="text-center p-t-40">
 						<a class="txt2" href="/users/login">
-							Akun tersebut sudah ada
+							Sudah punya akun?kuy login
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
