--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,8 +28,7 @@
 				</div>
 				<form class="login100-form validate-form" action="/users/signup" method="POST">
 					<span class="login100-form-title">
-						Daftar 
-                                         Sregep Shop Rest-api
+						Daftar Rest-api SregepshopID
 					</span>
 					<div class="wrap-input100 validate-input" data-validate = "Email di butuhkan">
 						<input class="input100" type="text" name="email" placeholder="Email">
