--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
 
 				<form class="login100-form validate-form" action="/users/login" method="POST">
 					<span class="login100-form-title">
-						Login to Sregep Shop Rest-Api
+						Masuk Rest-api SregepShopID
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Username is required">
