--- a/views/cecan.ejs
+++ b/views/cecan.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
-    <meta name="author" content="zeeoneofc">
+    <meta name="author" content="sregepshopID">
     <title>Sregep Shop - REST APIs</title>
     <meta property="og:site_name" name="og:site_name" content="SregepShop APIs">
     <meta property="og:title" name="og:title" content="SregepShop - REST APIs">
@@ -116,9 +116,9 @@
           </div>
         <ul class="nav">
           <li>
-            <a href="https://github.com/zeeoneofficial">
+            <a href="https://github.com/Zamzami123">
             <i class="tim-icons icon-send"></i>
-            <p>zeeoneofc</p>
+            <p>sregepshopID</p>
             </a>
           </li>
         </ul>
