--- a/views/nsfw.ejs
+++ b/views/nsfw.ejs
@@ -114,11 +114,11 @@
             <a href="javascript:void(0)" class="simple-text logo-mini">
             </a>
           </div>
-        <ul class="nav">
+         <ul class="nav">
           <li>
-            <a href="https://github.com/zeeoneofficial">
+            <a href="https://github.com/Zamzami123">
             <i class="tim-icons icon-send"></i>
-            <p>zeeoneofc</p>
+            <p>sregepshopID</p>
             </a>
           </li>
         </ul>
