--- a/views/news.ejs
+++ b/views/news.ejs
@@ -216,7 +216,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/news/cnn?apikey=<%= apikey %>"
+                              href="api/news/cnn?type=1&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -237,7 +237,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/news/cnbc?apikey=<%= apikey %>"
+                              href="api/news/cnbc?type=1&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -258,7 +258,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/news/republika?apikey=<%= apikey %>"
+                              href="api/news/republika?type=1&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -279,7 +279,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/news/tempo?apikey=<%= apikey %>"
+                              href="api/news/tempo?type=1&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -300,7 +300,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/news/antara?apikey=<%= apikey %>"
+                              href="api/news/antara?type=1&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -321,7 +321,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/news/kumparan?apikey=<%= apikey %>"
+                              href="api/news/kumparan?type=1&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -352,7 +352,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script> made with <i class="tim-icons icon-heart-2"></i> by
-            <a href="https://github.com/zeeoneofficial" target="_blank">ZeeoneOfc</a> for a better web.
+            <a href="https://github.com/Zamzami123" target="_blank">SregepshopID</a> for a better web.
           </div>
         </div>
       </footer>
