--- a/views/other.ejs
+++ b/views/other.ejs
@@ -248,7 +248,7 @@
                         </tr>                       
                         <tr>
                           <td>Kodepos</td>
-                          <td class="text-center">Apikey</td>
+                          <td class="text-center">kota & Apikey</td>
                           <td class="text-center">
                             <span
                               class="text-success tim-icons icon-check-2"></span
@@ -258,7 +258,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/other/kodepos?apikey=<%= apikey %>"
+                              href="api/other/kodepos?kota=blitar&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -279,7 +279,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/other/covid-world?apikey=<%= apikey %>"
+                              href="api/other/covid-world?kata=sregepshop&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -309,6 +309,26 @@
                             </a>
                           </td>
                         </tr>
+                     <td>Segera </td>
+                          <td class="text-center">kata & apikey</td>
+                          <td class="text-center">
+                            <span
+                              class="text-success tim-icons icon-check-2"></span
+                            >
+                          </td>
+                          <td class="text-center">
+                            <a
+                              type="button"
+                              class="text-success btn-sm btn-icons"
+                              href="api/other/segera?kata=bacot&apikey=<%= apikey %>"
+                              target="_blank"
+                              rel="nofollow"
+                              title="Try"
+                            >
+                              <i class="tim-icons icon-double-right"></i>
+                            </a>
+                          </td>
+                        </tr>
                       </tbody>
                       </table>
                     </div>
@@ -322,7 +342,7 @@
           <ul class="nav">
             <li class="nav-item">
               <a href="javascript:void(0)" class="nav-link">
-                ZEEONE OFC
+                SREGEP SHOP ID
               </a>
             </li>
           </ul>
@@ -331,7 +351,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script> made with <i class="tim-icons icon-heart-2"></i> by
-            <a href="https://github.com/zeeoneofficial" target="_blank">ZeeoneOfc</a> for a better web.
+            <a href="https://github.com/Zamzami123" target="_blank">SregepshopID</a> for a better web.
           </div>
         </div>
       </footer>
