--- a/views/cecan.ejs
+++ b/views/cecan.ejs
@@ -189,7 +189,7 @@
               <div class="col-lg-6 col-md-12">
                 <div class="card ">
                   <div class="card-header">
-                    <h4 class="card-title"> Cecan Api's</h4>
+                    <h4 class="card-title"> Asupan Api's</h4>
                   </div>
                   <div class="card-body">
                     <div class="table-responsive">
@@ -203,7 +203,49 @@
                               <th class="text-center">Get</th>
                             </tr>
                           </thead>
-                        <tbody>
+                        <tbody>                
+</tr>
+<td>Asupan douyin</td>
+                          <td class="text-center">Apikey</td>
+                          <td class="text-center">
+                            <span
+                              class="text-success tim-icons icon-check-2"></span
+                            >
+                          </td>
+                          <td class="text-center">
+                            <a
+                              type="button"
+                              class="text-success btn-sm btn-icons"
+                              href="api/asupan/douyin?apikey=<%= apikey %>"
+                              target="_blank"
+                              rel="nofollow"
+                              title="Try"
+                            >
+                              <i class="tim-icons icon-double-right"></i>
+                            </a>
+                          </td>
+                    </tr>
+<tr>
+                          <td>Asupan Tiktok</td>
+                          <td class="text-center">Apikey</td>
+                          <td class="text-center">
+                            <span
+                              class="text-success tim-icons icon-check-2"></span
+                            >
+                          </td>
+                          <td class="text-center">
+                            <a
+                              type="button"
+                              class="text-success btn-sm btn-icons"
+                              href="api/asupan/tiktok?apikey=<%= apikey %>"
+                              target="_blank"
+                              rel="nofollow"
+                              title="Try"
+                            >
+                              <i class="tim-icons icon-double-right"></i>
+                            </a>
+                          </td>
+                        </tr>
                             <tr>
                           <td>Cecan China</td>
                           <td class="text-center">Apikey</td>
@@ -350,7 +392,7 @@
                               <i class="tim-icons icon-double-right"></i>
                             </a>
                           </td>
-                    </tr>
+</tr>
                         </tbody>
                       </table>
                     </div>
